--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -26,6 +26,7 @@ h5py==3.15.1
 idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
+joblib==1.5.2
 keras==3.12.0
 kiwisolver==1.4.9
 libclang==18.1.1
@@ -52,6 +53,8 @@ python-dotenv==1.2.1
 python-multipart==0.0.20
 requests==2.32.5
 rich==14.2.0
+scikit-learn==1.7.2
+scipy==1.15.3
 six==1.17.0
 sql==2022.4.0
 starlette==0.50.0
@@ -61,6 +64,7 @@ tensorflow==2.16.1
 tensorflow-intel==2.16.1
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==3.2.0
+threadpoolctl==3.6.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
