--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -14,13 +14,13 @@ cycler==0.12.1
 exceptiongroup==1.3.1
 extras==1.0.0
 fastapi==0.123.5
-Flask==3.1.2
+Flask
 flatbuffers==25.9.23
 fonttools==4.61.0
 gast==0.7.0
 google-pasta==0.2.0
 grpcio==1.76.0
-gunicorn==23.0.0
+gunicorn
 h11==0.16.0
 h5py==3.15.1
 idna==3.11
@@ -33,7 +33,7 @@ libclang==18.1.1
 Markdown==3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
-matplotlib==3.10.7
+matplotlib
 mdurl==0.1.2
 ml-dtypes==0.3.2
 namex==0.1.0
@@ -41,7 +41,7 @@ numpy==1.26.4
 opt_einsum==3.4.0
 optree==0.18.0
 packaging==25.0
-pillow==10.3.0
+pillow
 protobuf==4.25.8
 psycopg2==2.9.11
 pydantic==2.12.5
@@ -49,7 +49,7 @@ pydantic_core==2.41.5
 Pygments==2.19.2
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
+python-dotenv
 python-multipart==0.0.20
 requests==2.32.5
 rich==14.2.0
@@ -60,7 +60,7 @@ sql==2022.4.0
 starlette==0.50.0
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow==2.16.1
+tensorflow==2.15.0
 tensorflow-intel==2.16.1
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==3.2.0
@@ -68,7 +68,7 @@ threadpoolctl==3.6.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
-uuid==1.30
+uuid
 uvicorn==0.38.0
 Werkzeug==3.1.4
 wrapt==2.0.1
